# modern-cpp-examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
modern-cpp/: CMakeLists.txt  auto-mva2.cpp  rangev3-aoc2022day1.cpp  rangev3-aoc2022day1.hpp  rangev3-aoc2022day1_main.cpp  rangev3-aoc2022day1_test.cpp
